# RosDot-Sandbox---Pipeline

./: Readme.md  config.json  docker-compose-all.yml  docker-compose-perception.yml  docker-compose-processor.yml  receive_projector_streeam.sh  start_calibrator.sh  start_rviz.sh
calibrations/: projectors.yml  tags.yaml
calibrations/tf_configs/: cam_028522074036_link.json  cam_101622075200_link.json  projector_odroid_h4plus_HDMI_A_1.json
docs/: godot_interface_changes.md
raspi/: Dockerfile  calibration.sh  docker-compose.yml  udev.rules.sh
sandbox_components/: CMakeLists.txt  Dockerfile  entrypoint.sh  package.xml
sandbox_components/src/: camera_reprojector.cpp  cloud_merger.cpp  heightmap_streamer.cpp
sandbox_operator/: Dockerfile  package.xml  setup.cfg  setup.py
sandbox_operator/sandbox_operator/: calibration_camera_refine.py  calibration_charuco.py  calibration_dot_probe.py  calibration_triangulation.py  calibration_tui.py  unified_operator.py
sandbox_operator/sandbox_operator/loaders/: godot_loader.py  merger_loader.py  projector_loader.py  realsense_loader.py  reprojector_loader.py  streamer_loader.py  tf_loader.py
server/: apriltagDockerfile  docker-compose.yml  elevation_mapping_params.yaml  observer.rviz  projector_calibrator.py  run_projector_calibrator.sh  sensor_calibration.sh  tags.yaml
server/cloud_merger_ws/: Dockerfile
server/cloud_merger_ws/src/cloud_merger/: CMakeLists.txt  package.xml
server/cloud_merger_ws/src/cloud_merger/src/: cloud_merger_node.cpp  dynamic_cloud_merger.cpp  heightmap_streamer.cpp
server/heightmap_udp_streamer_ws/: Dockerfile  heightmap_udp_streamer.py
